tp6/gatekeeper-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-bad-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-bad
  template:
    metadata:
      labels:
        app: test-bad
    spec:
      containers:
      - name: nginx
        image: nginx:latest
