tp6/gatekeeper_constraint_image_vuln.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImagePolicy
metadata:
  name: disallow-latest-and-unapproved-registries
spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    namespaces: ["default"]
  parameters: {}
